--- a/client/src/components/css/Landing.module.css
+++ b/client/src/components/css/Landing.module.css
@@ -78,3 +78,42 @@ min-height: 100vh;
     border-right: 2px solid rgb(238, 103, 238);
     box-shadow: rgba(240, 46, 170, 0.4) 5px 5px, rgba(240, 46, 170, 0.3) 10px 10px, rgba(240, 46, 170, 0.2) 15px 15px;
    }
+
+
+   /* .cloud {
+    position: absolute;
+    top: 0;
+    right: -500px;
+    opacity: 0.8;
+    animation: cloud 10s linear 1s infinite reverse;
+    z-index: 99;
+  }
+  
+  @keyframes light {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  @keyframes cloud {
+    from {
+      right: -500px;
+    }
+    to {
+      right: 102%;
+    }
+  }
+  
+  
+  
+  
+  @keyframes animate {
+    0% {
+      transform: scale(0);
+    }
+    100% {
+      transform: scale(1);
+    }
+  } */
