--- a/client/src/components/css/Home.module.css
+++ b/client/src/components/css/Home.module.css
@@ -14,7 +14,7 @@ left: 0;
 .centrar{
   
  position: relative;
- bottom: 650px;
+ bottom: 660px;
  right: 50px;
  display: grid;
 justify-content: end;
@@ -30,7 +30,7 @@ gap: 70px;
 .mundo{
   position: relative;
   left:20px;
-  top: 100px;
+  top: 90px;
   height: 700px;
   width:700px;
   border-radius: 100%;
@@ -60,3 +60,29 @@ align-items: center;
 }
 
 
+.botones{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 600px;
+  margin-top: 10px;
+  
+}
+
+.atras{
+  margin-right: 20px;
+}
+
+.select{
+  width: 100px;
+  text-align: center;
+  border-radius: 20px;
+  height: 27px;
+}
+.activity{
+  width: 100px;
+  height: 60px;
+}
+.p{
+  margin: 0px;
+}
