--- a/client/src/components/css/Card.module.css
+++ b/client/src/components/css/Card.module.css
@@ -7,6 +7,7 @@
    height:240px;
    border: 1px solid rgb(255, 255, 255);
    background-color:rgb(156, 198, 235);
+   border: none;
 }
 
 .card:hover {
@@ -21,7 +22,7 @@
     width: 250px;
     height: 139px;
     border-radius: 20px 20px  10px 6px;
-    border: 1px solid #f7f7ff;
+    border:none;
 }
 
 .bla{
